--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 Sellel tekstil ei ole mingit loogikat ega tagamõtet, ning ma pean lihtsalt 100 tähemärki kokku saama. Järgnev tabel koosneb kolmest värvist ja kolmest suvalisest asjast mis mulle meelde tulid. Punane lammas oleks vahva, ning Google andmetel Iranian Red Sheep kes elab Iraanis on punast värvi. Sinised porgandid ka täitsa eksisteerivad. Kollane nurgadiivan oleks ilus sisustus element.
 </p>
 
-<table>
+<html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
+
+<table style="width:50%">
   <tr>
     <th>Värv</th>
     <th>Objekt</th>
@@ -31,12 +39,11 @@ Sellel tekstil ei ole mingit loogikat ega tagamõtet, ning ma pean lihtsalt 100 
     <td>Kollane</td>
     <td>Nurgadiivan</td>
   </tr>
-
-  </tr>
 </table>
 
 </body>
 </html>
+
 
 <!DOCTYPE html>
 <html>
